--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,6 @@
   <title>Welcome to OpenShift</title>
 </head>
 <body>
-<h1>Hello, OpenShift.</h1>
+<h1>Hello, OpenShift - something new. Fra Per.</h1>
 </body>
 </html>
